Fix stretched project image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2105,7 +2105,6 @@ body.is-preload #wrapper {
 	overflow: hidden;
 	box-shadow: 1.8px 3.5px 3.5px hsl(0deg 0% 0% / 0.45);
 	width: 100%;
-	max-width: 900px;
 	background: #ffffffbf;
 	border-radius: 10px;
 	-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
